kubernetes/dmi-dev/activemq.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
spec:
  selector:
    app: activemq
  ports:
    - port: 1883
      targetPort: 1883
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
spec:
  selector:
    matchLabels:
      app: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:
      containers:
        - name: activemq
          image: apache/activemq-artemis:2.44.0
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: storage
              mountPath: /var/lib/artemis-instance
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: activemq-pvc
