kubernetes/dmi-dev/demo-provider-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-provider-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4500
  selector:
    name: demo-provider-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-provider-api
spec:
  selector:
    matchLabels:
      name: demo-provider-api
  replicas: 1
  template:
    metadata:
      labels:
        name: demo-provider-api
    spec:
      containers:
        - name: demo-provider-api
          image: nominaldevacr.azurecr.io/demo-provider-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4500
