kubernetes/dmi-dev/dmi-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmi-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: dmi-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dmi-api
spec:
  selector:
    matchLabels:
      name: dmi-api
  replicas: 1
  template:
    metadata:
      labels:
        name: dmi-api
    spec:
      containers:
        - name: dmi-api
          image: nominaldevacr.azurecr.io/dmi-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
