kubernetes/dmi-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmi-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: dmi-api
